--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+    * {
     padding: 0;
     margin: 0;
     border: 0;
@@ -8,7 +8,7 @@
 nav {
     padding: 2em;
     display: grid;
-    grid-template-columns: 1.5fr 1fr 2fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     box-shadow: 1px 1px 7px black;
 }
 
@@ -32,13 +32,12 @@ nav {
 
 .ham {
     height: 30px;
-    display: none;
     cursor: pointer;
 }
 
 #fill {
     display: none;
-}
+    /* }
 
 @media screen and (max-width:870px) {
     .links,
@@ -57,4 +56,4 @@ nav {
     #fill {
         display: block;
     }
-}
+} */
